--- a/src/index.html
+++ b/src/index.html
@@ -16,4 +16,5 @@
   <body>
     <app-root></app-root>
   </body>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDbTZS3NhzzwPrieYEGq1qhWLQkddaKtoQ"></script>
 </html>
